fix: overflow text

--- a/src/scss/component/home.scss
+++ b/src/scss/component/home.scss
@@ -444,13 +444,13 @@
 		}
 
 		@media (max-width: em(768)) {
-			@include adaptive-value-mobile("height", 104, 86, 0);
+			@include adaptive-value-mobile("height", 104, 84, 0);
 			@include adaptive-value-mobile("font-size", 14, 12, 0);
 			@include adaptive-value-mobile("line-height", 17, 14, 0);
 		}
 
 		@media (max-width: em(320)) {
-			height: 86px;
+			height: 84px;
 			font-size: 12px;
 			line-height: 14px;
 			text-indent: 20px;
